--- a/src/components/Body/Body.css
+++ b/src/components/Body/Body.css
@@ -1,9 +1,19 @@
 .body-container {
   margin-top: -4px;
-  padding: 0px;
+  padding: 30px;
   display: flex;
+  flex-direction: column;
   position: relative;
   height: auto;
   width: 100%;
   background-color: black;
+  justify-content: center;
+  align-items: center;
+}
+
+.card-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 30px;
 }
