--- a/src/components/Body/Skills/Skills.css
+++ b/src/components/Body/Skills/Skills.css
@@ -2,7 +2,10 @@
   display: flex;
   width: 100%;
   height: 800px;
+  justify-content: center;
+  align-items: center;
 }
 
 .skills-content {
+  color: white;
 }
