--- a/src/components/Body/Body.css
+++ b/src/components/Body/Body.css
@@ -1,19 +1,20 @@
 .body-container {
   margin-top: -4px;
-  padding: 30px;
+  padding: 0px;
   display: flex;
   flex-direction: column;
   position: relative;
   height: auto;
   width: 100%;
-  background-color: black;
+  background-color: purple;
   justify-content: center;
   align-items: center;
 }
 
-.card-container {
+.cards {
+  width: 100%;
+  background-color: black;
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 30px;
 }
