--- a/src/components/Body/Cards/Card.css
+++ b/src/components/Body/Cards/Card.css
@@ -4,7 +4,7 @@
   color: white;
   width: 200px;
   height: 300px;
-  padding: 10px;
+  padding: 50px;
 }
 
 .card figure {
@@ -33,12 +33,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
-
   background-color: purple;
   transform: rotateY(180deg);
 }
-.back a {
+.card .back a {
   margin: 0;
+  padding-bottom: 20px;
 }
 
 .image {
@@ -70,6 +70,11 @@ figure {
   transition: all 0.2s ease-in-out;
 }
 .button:hover {
+  transition: all 0.2s ease-in-out;
+  background-color: pink;
+}
+
+.card .back a:hover {
   transition: all 0.2s ease-in-out;
   background-color: pink;
 }
