--- a/src/components/Body/Skills/Skills.css
+++ b/src/components/Body/Skills/Skills.css
@@ -1,11 +1,23 @@
 .skills-container {
+  margin-left: -130px;
   display: flex;
   width: 100%;
   height: 800px;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
 
 .skills-content {
+  width: 100%;
+  display: flex;
   color: white;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+}
+
+.skills-title {
+  font-size: 5rem;
+  margin-left: 130px;
 }
