--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,6 +1,13 @@
 .footer-container {
   display: flex;
-  background-color: red;
-  height: 100px;
+  background-color: white;
+  height: 150px;
   width: 100%;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.content {
+  margin: 0;
+  padding: 10px;
 }
