--- a/src/components/Body/Skills/SkillCard/SkillCard.css
+++ b/src/components/Body/Skills/SkillCard/SkillCard.css
@@ -22,6 +22,7 @@
 }
 .skillcard-img {
   width: 100%;
+  height: 160px;
   display: block;
   border-radius: 20px 20px 0 0;
 }
@@ -32,13 +33,13 @@
   padding: 20px 10px;
 }
 .details > h3 {
-  color: #ffffff;
+  color: #9966ff;
   font-weight: 600;
   font-size: 18px;
   margin: 10px 0 15px 0;
 }
 .details > p {
-  color: #a0a0a0;
+  color: #ccb3ff;
   font-size: 15px;
   line-height: 30px;
   font-weight: 400;
